--- a/getting-started/01.1-user.md
+++ b/getting-started/01.1-user.md
@@ -1,5 +1,7 @@
 <!--
 #/ title: User menu
+#/ stepIndicator: appUser
+#/ nextStepUrl: menu/systemInfo
 -->
 <p>
 The User menu lets you logout and view your profile page. Your user profile lists your group memberships and a form to list and generate API tokens.
