--- a/getting-started/01.2-system.md
+++ b/getting-started/01.2-system.md
@@ -1,5 +1,7 @@
 <!--
 #/ title: System menu
+#/ stepIndicator: appAdmin
+#/ stepIndicatorPosition: top
 -->
 <p>
 The system menu contains access to: Key Storage, ACLs, System Info, Plugins, and other system controls.
