--- a/getting-started/01.3-projects.md
+++ b/getting-started/01.3-projects.md
@@ -1,5 +1,7 @@
 <!--
 #/ title: Project menu
+#/ stepIndicator: projectSelect
+#/ nextStepUrl: menu/home
 -->
 <p>
 The left navigation bar lets you choose a project. Once inside a project you can switch to the project’s Dashboard, Jobs, Nodes, Commands and Activity pages. Project adminstrators will also be able to access the Project Settings pages.
